# emailbuilder

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
emailbuilder/: __init__.py  email.py  experimental.py  utils.py
emailbuilder/components/: __init__.py  base.py  containers.py  elements.py  embeddables.py
