[project]
name = "emailbuilder"
description = "Simple HTML e-mail generator"
version="0.1.4"
authors=[
  { name = "Diogo Silva", email="diogopiccirillo@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies=[]

[project.urls]
homepage = "https://github.com/coheleth/emailbuilder"
documentation = "https://github.com/coheleth/emailbuilder"
repository = "https://github.com/coheleth/emailbuilder"